# molesim

./: .gitmodules  CMakeLists.txt  README.md
apps/: AABox.hpp  BVH.hpp  CMakeLists.txt  Grid.hpp  IVector3.hpp  KDTree.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Molesim.cpp  MolesimBenchmark.cpp  MolesimVis.cpp  Octree.hpp  Quaternion.hpp  Random.hpp  Ray3D.hpp  RigidTransform.hpp  Scalar.hpp  Simulation.cpp  Simulation.hpp  Sphere.hpp  TRSTransform3D.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
assets/shaders/: atomFragment.glsl  atomVertex.glsl  renderingShaderCommon.glsl
samples/: 7DBB.mol2
scripts/: benchmark-results.csv  plot-results.py
